# musi

./: .gitignore  README.md  install.sh  pyproject.toml  test_deadlock.py  test_orchestrator.py  test_playlist_picker.py  test_rip.py
musi/: __init__.py  art.py  cli.py  config.py  library.py  modals.py  models.py  orchestrator.py  queue.py  rip.py  services.py
musi/app/: __init__.py  mpris_export.py  musi_app.py
musi/engines/: __init__.py  base.py  mpv_engine.py  spotify_engine.py
musi/search/: __init__.py  base.py  local.py  spotify.py  youtube.py
